Revert "Simple graphical display of available datasets."
This reverts commit 95b286d3128d4209b2c6a02458ab136eb7d5f96d.

--- a/index.html
+++ b/index.html
@@ -41,53 +41,6 @@
   <!-- Tailored Codepen.io snippets -->
   <style>
 
-  .box {
-    flex-flow: column;
-    width: 100%;
-    height: 20%;
-    margin: 0;
-  }
-  .col-item {
-    display: flex;
-    flex-flow: row;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    transition: flex 0.3s ease;
-  }
-  .item {
-    margin: 1px;
-    flex: 0.0000000001 2 50%;
-    border: 0px solid #dddddd;
-    box-sizing: border-box;
-    transition: flex 0.3s ease;
-  }
-  .col-item:hover {
-  //  flex: 1 1 100%;
-  }
-  .item:hover {
-  //  flex: 1 1 100%;
-  }
-
-  .bg1 {
-    background-color: #0D2C43;
-  }
-
-  .bg2 {
-    background-color: green;
-  }
-
-  .bg3 {
-    background-color: yellow;
-  }
-
-  .bg4 {
-    background-color: blue;
-  }
-
-
-
-
   .image-grid div {
     width: 25%;
     height: 240px;
@@ -1132,56 +1085,19 @@
               the software is developed through an <br>Agile methodology, releasing software
               <text style="color:White;font-style: italic;">early</text> and
               <text style="color:White;font-style: italic;">frequently</text>,
-              <br>reacting flexibly and quickly to user needs. The type and number<br> of
-              CCI datasets available via CCI Toolbox <text style="color:White;">v1.0</text> is displayed opposite.
-</p>
-<!--              CCI Toolbox <text style="color:White;">v1.0</text> provides the following CCI datasets - <br>Aerosol CCI (x6),
+              <br>reacting flexibly and quickly to user needs.
+<br><br>
+              CCI Toolbox <text style="color:White;">v1.0</text> provides the following CCI datasets - <br>Aerosol CCI (x6),
               Cloud CCI (x6), Fire CCI (x1),
               Ocean Colour CCI (x28),<br>
               Ozone CCI (x2),
               Soil Moisture CCI (x2), and
               Sea Surface <br>Temperature CCI (x1). More are on the way.
             </p>
--->
           </div>
           <div class="col-md-4">
-            <div class="box">
-              <div class="col-item">
-                <div class="item bg1">
-                  <p style="color:#FFCCCC;font-size:0.95em;text-align:center;vertical-align:middle;padding-top:20px;">
-                    Aerosol CCI<br>6
-                </p></div>
-                <div class="item bg1">
-                  <p style="color:#FFCCCC;font-size:0.95em;text-align:center;vertical-align:middle;padding-top:20px;">
-                  Cloud CCI<br>6</p></div>
-              </div>
-              <div class="col-item">
-                <div class="item bg1">
-                  <p style="color:#FFCCCC;font-size:0.95em;text-align:center;vertical-align:middle;padding-top:20px;">
-                  Fire CCI<br>1</p></div>
-                <div class="item bg1">
-                  <p style="color:#FFCCCC;font-size:0.95em;text-align:center;vertical-align:middle;padding-top:20px;">
-                  Ocean Colour CCI<br>28</p></div>
-              </div>
-              <div class="col-item">
-                <div class="item bg1">
-                  <p style="color:#FFCCCC;font-size:0.95em;text-align:center;vertical-align:middle;padding-top:20px;">
-                  Ozone CCI<br>2</p></div>
-                <div class="item bg1">
-                  <p style="color:#FFCCCC;font-size:0.95em;text-align:center;vertical-align:middle;padding-top:20px;">
-                  Soil Moisture CCI<br>2</p></div>
-              </div>
-              <div class="col-item">
-                <div class="item bg1">
-                  <p style="color:#FFCCCC;font-size:0.95em;text-align:center;vertical-align:middle;padding-top:15px;">
-                  SST CCI<br>1</p></div>
-              </div>
-            </div>
-          </div>
-
-          <!--<div class="col-md-4">
               <img alt="githubLogo" src="img/if_stack_1287510.png" width="230" />
-          </div>-->
+          </div>
         </div>
       </div>
     </section>
