--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-W4V93P8');</script>
+  <!-- End Google Tag Manager -->
 
-  <!-- Global Site Tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107847917-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-107847917-1');
-  </script>
-
-  <link rel="shortcut icon" type="image/x-icon" href="cci-toolbox-favicon.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -321,7 +318,7 @@
     z-index: 15;
   }}
 
-  @media screen and (min-width: 400px ?? max-width: 660px) {
+  @media screen and (min-width: 400px), screen and (max-width: 660px) {
     .direction-l .desc,
     .direction-r .desc {
     	margin: 1em 4em 0 4em;
@@ -809,6 +806,11 @@
 
 <body id="page-top">
 
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W4V93P8"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
   <!-- Navigation -->
 
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -861,8 +863,8 @@
     <section class="contact bg-primary text-center" id="about">
       <div class="container">
         <div class="row">
-          <div class="col-md-10 mx-auto">
-            <h2>The CCI Toolbox is a software environment for ingesting,
+          <div class="col-md-12 mx-auto">
+            <h2>The CCI Toolbox (Cate) is a software environment for ingesting,
               operating on and visualising all ESA Climate Change Initiative data.
             </h2>
             <p class="text-muted">
@@ -876,11 +878,11 @@
 
     <!-- Interfaces panel -->
 
-    <section class="contact text-center" style="background-color:#FFB031">
+    <section class="contact text-center" id="interfaces" style="background-color:#FFB031">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 my-auto text-center">
-            <h2>CCI Toolbox Interfaces</h2>
+            <h2>Cate Interfaces</h2>
           </div>
         </div>
         <div class="row">
@@ -889,29 +891,29 @@
               <div class="row">
                 <div class="col-lg-4">
                   <div class="feature-item">
-                    <img src="img/mockgui.png" width="170" style="padding:10px")>
+                    <img src="img/mockgui.png" width="170" style="padding:10px" )>
                     <h3>A Graphical User Interface</h3>
-                    <p class="text-muted">A desktop application providing
-                      a graphical interface to the same functionality
+                    <p class="text-muted">The Cate Desktop application provides
+                      a graphical user interface to the same functionality
                       provided by the Command Line Interface.
                     </p>
                   </div>
                 </div>
                 <div class="col-lg-4">
                   <div class="feature-item">
-                    <img src="img/Terminal-icon.png" width="170" style="padding:10px")>
+                    <img src="img/Terminal-icon.png" width="170" style="padding:10px" )>
                     <h3>A Command Line Interface</h3>
                     <p class="text-muted">Access and process ESA climate data
-                      through a command shell or console terminal,
-                      and can also be used to write batch scripts.</p>
+                      through a command shell or console terminal.
+                      Use it to write your own batch scripts.</p>
                   </div>
                 </div>
                 <div class="col-lg-4">
                   <div class="feature-item">
-                    <img src="img/Python-icon.png" width="170" style="padding:10px")>
+                    <img src="img/Python-icon.png" width="170" style="padding:10px" )>
                     <h3>A Python API</h3>
                     <p class="text-muted">
-                    The Python API allows you to use the CCI Toolbox in your own Python programs,
+                    The Python API allows you to use Cate in your own Python programs,
                     and make up new functions for the toolbox too.</p>
                   </div>
                 </div>
@@ -929,9 +931,9 @@
           <div class="col-md-10 mx-auto">
             <h2>The Graphical User Interface</h2>
             <p class="text-muted">
-              The CCI Toolbox graphical desktop provides access to remote & local CCI data sources and a
-              suite of operations to act on the data. This typically results in an in-memory
-              means of holding the data, which we call a 'resource'. The desktop also
+              Cate Desktop, the CCI Toolbox graphical user interface, provides access to remote & local CCI
+              data sources and a suite of operations to act on the data. This typically results in an in-memory
+              means of holding the data, which we call a "resource". The desktop also
               provides a means to visualise the data under analysis.
             </p>
             <br>
@@ -991,15 +993,16 @@
             		<div class="direction-r">
             			<div class="flag-wrapper">
             				<span class="flag">Download CCI Toolbox</span>
-            				<span class="time-wrapper">
-                      <span class="time">On Github</span>
-                    </span>
+            				<span class="time-wrapper"><span class="time">From GitHub</span></span>
             			</div>
-            			<div class="desc">Go to the CCI Toolbox
-                    <a href="https://github.com/CCI-Tools/cate/releases">releases</a> page
-                    on Github. The latest toolbox release will be at the top.
-                    Download both the Climate Analysis Toolbox for ESA (Cate) Core and the Cate Desktop.
-                  </div>
+            			<div class="desc">
+                            Download version 1.0:<br/>
+                            &#8226;&nbsp;&nbsp;Cate <a href="https://github.com/CCI-Tools/cate/releases/download/v1.0.0/cate-1.0.0-MacOSX-x86_64.sh">Core</a> & <a href="https://github.com/CCI-Tools/cate/releases/download/v1.0.0/Cate.Desktop-1.0.0.dmg">Desktop</a> for Mac<br/>
+                            &#8226;&nbsp;&nbsp;Cate <a href="https://github.com/CCI-Tools/cate/releases/download/v1.0.0/cate-1.0.0-Linux-x86_64.sh">Core</a> & <a href="https://github.com/CCI-Tools/cate/releases/download/v1.0.0/cate-desktop-1.0.0-x86_64.AppImage">Desktop</a> for Linux<br/>
+                            &#8226;&nbsp;&nbsp;Cate <a href="https://github.com/CCI-Tools/cate/releases/download/v1.0.0/cate-1.0.0-Windows-x86_64.exe">Core</a> & <a href="https://github.com/CCI-Tools/cate/releases/download/v1.0.0/Cate.Desktop.Setup.1.0.0.exe">Desktop</a> for Windows<br/>
+                            Or visit Cate's <a href="https://github.com/CCI-Tools/cate/releases">releases</a>
+                            page on GitHub <br>for older versions.
+                        </div>
             		</div>
             	</li>
 
@@ -1012,28 +1015,34 @@
                       <span class="time">On your computer</span>
                     </span>
             			</div>
-            			<div class="desc">Install Cate Core first, before Cate Desktop. If you're
-                    on Mac or Linux, do this:<br>
-                    bash cate-'Version'-'Platform'.sh
-                  </div>
+            			<div class="desc">Mac & Linux users do this in a terminal window:<br/>
+                          <code style="color:white;font-style:normal;background-color:#4C4C4C;">
+                            $bash cate-&lt;version&gt;-&lt;platform&gt;.sh</code><br/>
+                            Windows users just double-click.
+                        </div>
             		 </div>
             	</li>
 
             	<!-- 3 -->
               <li>
-            		<div class="direction-r">
+                  <div class="direction-r">
             			<div class="flag-wrapper">
             				<span class="flag">Install Cate Desktop</span>
             				<span class="time-wrapper">
-                      <span class="time">On your computer</span>
-                    </span>
+                                <span class="time">On your computer</span>
+                            </span>
             			</div>
             			<div class="desc">Execute the installer. No bash scripts this time if you're on Mac or Linux.
-                  </div>
+                            Note, you need Cate Core to be installed first.
+                        </div>
             	  </div>
                </li>
              </ul>
            </div>
+              <p style="color:#FFCCCC">
+                  Details on the Cate system requirements, installation, <br>and configuration can be found
+                  <a href="http://cate.readthedocs.io/en/latest/user_manual/um_setup.html">here</a>.
+              </p>
           </div>
           <div class="col-md-4 text-center ">
             <img alt="githubLogo" src="img/Octocat.png" width="300" style="padding:0px"/><br>
@@ -1051,19 +1060,19 @@
             <h2>Use our documentation.<br>From how to get started.<br>To everything else.<br></h2>
             <p style="color:#F4B12A"></p>
             <p style="color:#FFCCCC">
-              Our documentation is <a href="http://ect-core.readthedocs.io/en/latest/index.html">online</a>.
-              This includes a <a href="http://ect-core.readthedocs.io/en/latest/quick_start.html">Quick Start</a> to help
+              Our documentation is <a href="http://cate.readthedocs.io/en/latest/index.html">online</a>.
+              This includes a <a href="http://cate.readthedocs.io/en/latest/quick_start.html">Quick Start</a> to help
               you get going with the Command Line Interface.
 
-              The <a href="http://ect-core.readthedocs.io/en/latest/user_manual.html">User Manual</a> chapter describes
+              The <a href="http://cate.readthedocs.io/en/latest/user_manual.html">User Manual</a> chapter describes
               each of the user interfaces, plus details of the available
-              <a href="http://ect-core.readthedocs.io/en/latest/op_specs.html">Operations</a>.
+              <a href="http://cate.readthedocs.io/en/latest/op_specs.html">Operations</a>.
 
               You can add operations to the CCI Toolbox through the
-              <a href="http://ect-core.readthedocs.io/en/latest/api_reference.html">API</a>. Other technical information
-              includes <a href="http://ect-core.readthedocs.io/en/latest/architecture.html">CCI Toolbox
-              Architecture</a>, <a href="http://ect-core.readthedocs.io/en/latest/developer_guide.html">Developer
-              Guide</a> and <a href="http://ect-core.readthedocs.io/en/latest/detailed_design.html">Detailed Design</a>.
+              <a href="http://cate.readthedocs.io/en/latest/api_reference.html">API</a>. Other technical information
+              includes <a href="http://cate.readthedocs.io/en/latest/architecture.html">CCI Toolbox
+              Architecture</a>, <a href="http://cate.readthedocs.io/en/latest/developer_guide.html">Developer
+              Guide</a> and <a href="http://cate.readthedocs.io/en/latest/detailed_design.html">Detailed Design</a>.
               We'll have YouTube training videos for you soon. But not yet. We're still working on those.
             </p>
           </div>
@@ -1078,22 +1087,26 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8">
-            <h2>CCI data sources in</br> CCI Toolbox v1.0<br></h2>
+            <h2>CCI data sources in<br/>CCI Toolbox v1.0</h2>
             <p style="color:#F4B12A"></p>
             <p style="color:#FFCCCC">
-              The latest toolbox release handles only a limited number of CCI <br>datasets and operations :
-              the software is developed through an <br>Agile methodology, releasing software
-              <text style="color:White;font-style: italic;">early</text> and
-              <text style="color:White;font-style: italic;">frequently</text>,
-              <br>reacting flexibly and quickly to user needs.
-<br><br>
-              CCI Toolbox <text style="color:White;">v1.0</text> provides the following CCI datasets - <br>Aerosol CCI (x6),
+              All ESA CCI datasets published through the
+              ESA <a href="http://cci.esa.int/data">CCI Open Data Portal</a><br>
+              can be typically accessed by Cate's
+              <a class="js-scroll-trigger" href="#interfaces">Python API</a>
+              and
+              <a class="js-scroll-trigger" href="#interfaces">Command Line Interface</a>.
+              <br/><br/>
+              For <text style="color:White;">version 1.0</text> of the CCI Toolbox
+              we have limited the number of CCI datasets available
+              to the Cate Desktop, our
+              <a class="js-scroll-trigger" href="#interfaces">Graphical User Interface</a>.
+              Cate Desktop currently supports the following CCI datasets - Aerosol CCI (x6),
               Cloud CCI (x6), Fire CCI (x1),
-              Ocean Colour CCI (x28),<br>
+              Ocean Colour CCI (x28),
               Ozone CCI (x2),
-              Soil Moisture CCI (x2), and
-              Sea Surface <br>Temperature CCI (x1). More are on the way.
-            </p>
+              Soil Moisture CCI (x3), and
+              Sea Surface Temperature CCI (x1).<br> More are on the way.
           </div>
           <div class="col-md-4">
               <img alt="githubLogo" src="img/if_stack_1287510.png" width="230" />
@@ -1104,14 +1117,15 @@
 
     <!-- Support panel -->
 
-    <section class="contact" id="support" id="download" style="color:#ffffff;background-color:#0F3B54">
+    <section class="contact" id="support" style="color:#ffffff;background-color:#0F3B54">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
             <h2>Made for users, by users. <br>We are happy to support you.</h2>
             <p class="text-muted">
-              Please post any support requests, bug reports, <br> or feature requests in the toolbox
-              <a href="https://github.com/CCI-Tools/cate/issues">Issue Tracker</a>.<br>
+              Please feel free posting any support and feature requests in the
+              <a href="https://groups.google.com/forum/#!forum/cci-tools">User Forum</a> and<br/>
+              consider reporting trouble and bugs in Cate's <a href="https://github.com/CCI-Tools/cate/issues">Issue Tracker</a>.<br>
               We'll then take it from there, and keep you updated.
             </p>
           </div>
@@ -1124,7 +1138,7 @@
 
     <!-- Feedback panel -->
 
-    <section class="contact" id="download" style="color:#ffffff;background-color:#0F2C43">
+    <section class="contact" id="feedback" style="color:#ffffff;background-color:#0F2C43">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
@@ -1132,8 +1146,8 @@
             </h2>
             <p class="text-muted">
               We develop the CCI Toolbox by using Agile methodologies, <br> working side by side with users.
-              This enables us to <br>quickly respond to your needs. Let us know what you think
-              <br> via the toolbox <a href="https://github.com/CCI-Tools/cate/issues">Issue Tracker</a> or
+              This enables us to <br/>quickly respond to your needs. Let us know what you think
+              <br> via the toolbox <a href="https://groups.google.com/forum/#!forum/cci-tools">User Forum</a> or
               drop us an <br>email at
               <a href="mailto:climate.office@esa.int?cc=team@ccitools.org?subject=CCI%20Toolbox%20Feedback" target="_top">
               climate.office@esa.int</a>. We're listening.
@@ -1148,7 +1162,7 @@
 
     <!-- Team panel -->
 
-    <section class="contact" id="team" id="download" style="color:#ffffff;background-color:#0F3B54">
+    <section class="contact" id="team" style="color:#ffffff;background-color:#0F3B54">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
@@ -1176,7 +1190,7 @@
           The CCI Toolbox software is provided under the <a style="color:#aaaaaa" href="https://opensource.org/licenses/MIT">
           MIT License</a>.</p>
           <div>
-            <img src="img/partnersInvert2.png" width="810" style="padding:10px")>
+            <img src="img/partnersInvert2.png" width="810" style="padding:10px" )>
           </div>
           <p>
           The CCI Toolbox project partners comprise
