--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+
+<!-- Redirect the user to <new_url>-->
+<meta http-equiv="refresh" content="0; url=https://cci-tools.github.io/">
+<!-- Make it know that <new_url> is the canonical URL -->
+<link rel="canonical" href="https://cci-tools.github.io/" />
+  
 <html lang="en">
 
 <head>
